src/main/java/com/example/testProject/error/BadRequestException.java
package com.example.testProject.error;

public class BadRequestException extends RuntimeException {
    public BadRequestException(String message) {
        super(message);
    }
}

